# scemu

./: .README.md.swp  .gitconfig  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  Vagrantfile  libs  raccoon.scemu  rsrc  vidar.scemu  x
.cargo/: config.toml
docs/: ARGUMENTS.md  COMPILATION.md  CONSOLE.md  GULOADER.md  PROGRAMATICALLY.md  TODO.md
libmwemu/: Cargo.toml  README.md
libmwemu/src/: banzai.rs  breakpoint.rs  colors.rs  config.rs  console.rs  constants.rs  context32.rs  context64.rs  eflags.rs  elf32.rs  elf64.rs  emu.rs  endpoint.rs  err.rs  exception.rs  flags.rs  fpu.rs  hook.rs  hooks.rs  inline.rs  lib.rs  macros.rs  ntapi32.rs  pe32.rs  pe64.rs  peb32.rs  peb64.rs  regs64.rs  script.rs  serialization.rs  structures.rs  syscall32.rs  syscall64.rs  tests.rs
libmwemu/src/emu/: banzai.rs  breakpoint.rs  colors.rs  console.rs  constants.rs  elf32.rs  elf64.rs  err.rs  exception.rs  flags.rs  fpu.rs  hook.rs  instructions.rs  macros.rs  maps.rs  mod.rs  ntapi32.rs  pe32.rs  pe64.rs  peb32.rs  peb64.rs  regs64.rs  script.rs  structures.rs  syscall32.rs  syscall64.rs  winapi32.rs  winapi64.rs
libmwemu/src/emu/engine/: logic.rs  mod.rs
libmwemu/src/emu/maps/: mem64.rs  mod.rs
libmwemu/src/emu/winapi32/: advapi32.rs  crypt32.rs  dnsapi.rs  helper.rs  iphlpapi.rs  kernel32.rs  kernelbase.rs  libgcc.rs  mscoree.rs  msvcrt.rs  ntdll.rs  oleaut32.rs  shlwapi.rs  user32.rs  wincrt.rs  wininet.rs  ws2_32.rs
libmwemu/src/emu/winapi64/: advapi32.rs  comctl64.rs  dnsapi.rs  kernel32.rs  kernelbase.rs  ntdll.rs  shell32.rs  shlwapi.rs  user32.rs  winhttp.rs  wininet.rs  ws2_32.rs
libmwemu/src/engine/: logic.rs  mod.rs
libmwemu/src/maps/: mem64.rs  mod.rs
libmwemu/src/serialization/: mod.rs
libmwemu/src/winapi32/: advapi32.rs  crypt32.rs  dnsapi.rs  helper.rs  iphlpapi.rs  kernel32.rs  kernelbase.rs  libgcc.rs  mod.rs  mscoree.rs  msvcrt.rs  ntdll.rs  oleaut32.rs  shlwapi.rs  user32.rs  wincrt.rs  wininet.rs  ws2_32.rs
libmwemu/src/winapi64/: advapi32.rs  comctl32.rs  comctl64.rs  dnsapi.rs  gdi32.rs  kernel32.rs  kernelbase.rs  mod.rs  ntdll.rs  ole32.rs  oleaut32.rs  shell32.rs  shlwapi.rs  user32.rs  uxtheme.rs  winhttp.rs  wininet.rs  ws2_32.rs
libscemu/: Cargo.toml  README.md
maps32/: WINSPOOL.DRV  banzai.csv  crypt32.dll.id1  crypt32.dll.id2  crypt32.dll.nam  crypt32.dll.til  vtcheck.py
maps64/: linker.bin_prev  shellcode.hex
mwemu/: .gitignore  Cargo.toml
pymwemu/: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  pyproject.toml
pymwemu/examples/: danabot_rsa.ipynb  raccoon_strings.ipynb  xloader_keygen.ipynb
pymwemu/examples/scripts/: api_implementation.py  danabot_crypto.py  danabot_extract.py  danabot_get_string_emu.py  danabot_int_deobfus_emu.py  emu_pwer.py  emu_rat.py  gozi_decryptbss_emu.py  gozi_dga.py  raccoon_strings.py  ssl_key128_gen.py  test.py  vidar_strings.py  vidar_strings2.py  xloader_dexor.py  xloader_keygen.py
pymwemu/src/: lib.rs
scemu/: Cargo.toml
script_examples/: README.md  call.mwemu  (+7 more)
(+167 files in other folders)
