[package]
name = "scemu"
version = "0.7.10"
authors = ["sha0coder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libscemu = "0.18.6"
#libscemu = { path = "/home/sha0/src/libscemu/" }
#libscemu = { path = "/Users/sha0coder/src/libscemu/" }
#libscemu = { path = "/Users/jesus/src/libscemu/" }
