[package]
name = "scemu"
version = "0.7.10"
authors = ["sha0coder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.22"
env_logger = "0.11.6"
libscemu = "0.19.3"
#libscemu = { path = "/home/sha0/src/libscemu/" }
#libscemu = { path = "/Users/sha0coder/src/libscemu/" }
#libscemu = { path = "/Users/jesus/src/libscemu/" }
#libscemu = { path = "/Users/brandon/Desktop/scemu/libscemu" }
