[package]
name = "pymwemu"
version = "0.9.6"
edition = "2021"
description = "x86 32/64bits and system internals emulator, for securely emulating malware and other stuff."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymwemu"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
env_logger = "0.11.6"
#libmwemu = { path = "../libmwemu" }
libmwemu = "0.19.5"
